--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heroes_df.drop(\"Unnamed: 0\", axis=1, inplace=True)\n",
+    "heroes_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
